[tool.poetry]
name = "platyp-api"
version = "1.0.1"
description = ""
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
readme = "README.md"
packages = [{include = "api"}]
include = ["api/data/*.yaml"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
enacit4r-auth = {git = "https://github.com/EPFL-ENAC/enacit4r-auth", rev = "0.6.1"}
enacit4r-sql = {git = "https://github.com/EPFL-ENAC/enacit4r-sql", rev = "0.4.1"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
dynaconf = "^3.2.6"
python-multipart = "^0.0.18"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
uvicorn = "^0.32.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
h3 = "^4.3.1"
geojson-pydantic = "^2.1.0"
shapely = "^2.1.2"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
